adding more docs to the swagger, and config the cors for commucate with swagger (possibly frontend), and make some changed to the login/register route
