# app/backend/app/Http/Requests/Auth/LoginRequest.php
@@ -1,0 +1,57 @@
+<?php
+
+namespace App\Http\Requests\Auth;
+
+use Illuminate\Foundation\Http\FormRequest;
+
+/**
+ * @OA\Schema(
+ *   schema="loginRequest",
+ *   required={"email", "password"},
+ *   @OA\Property(
+ *     property="email",
+ *     type="string",
+ *     format="string",
+ *     description="Email for login"
+ *   ),
+ *   @OA\Property(
+ *     property="password",
+ *     type="string",
+ *     description="The account's password"
+ *   )
+ * )
+ */
+
+class LoginRequest extends FormRequest
+{
+    /**
+     * Determine if the user is authorized to make this request.
+     */
+    public function authorize(): bool
+    {
+        return true;
+    }
+
+    /**
+     * Get the validation rules that apply to the request.
+     *
+     * @return array<string, \Illuminate\Contracts\Validation\ValidationRule|array<mixed>|string>
+     */
+    public function rules(): array
+    {
+        return [
+            'email' => 'required|email',
+            'password' => 'required|string|min:8'
+        ];
+    }
+    /**
+     * Get custom error messages
+     */
+    public function messages(): array
+    {
+        return [
+            'email.required' => 'Email is required',
+            'password.required' => 'Password is required',
+        ];
+    }
+}
