# app/backend/app/Models/User.php
@@ -9,6 +9,31 @@ use Illuminate\Notifications\Notifiable;
 use Illuminate\Support\Facades\Auth;
 use Laravel\Sanctum\HasApiTokens;
 
+/**
+ * @OA\Schema(
+ *      schema="user",
+ *      required={"name", "email", "password"},
+ *      @OA\Property(
+ *         property="id",
+ *         type="integer",
+ *         format="int64"
+ *     ),
+ *     @OA\Property(
+ *         property="name",
+ *         type="string"
+ *     ),
+ *     @OA\Property(
+ *         property="email",
+ *         type="string",
+ *         format="email"
+ *     ),
+ *     @OA\Property(
+ *         property="password",
+ *         type="string",
+ *     )
+ * )
+ */
+
 class User extends Authenticatable
 {
     /** @use HasFactory<\Database\Factories\UserFactory> */
@@ -20,9 +45,9 @@ class User extends Authenticatable
      * @var list<string>
      */
     protected $fillable = [
-        'name',
-        'email',
-        'password',
+        "name",
+        "email",
+        "password",
     ];
 
     /**
@@ -31,8 +56,8 @@ class User extends Authenticatable
      * @var list<string>
      */
     protected $hidden = [
-        'password',
-        'remember_token',
+        "password",
+        "remember_token",
     ];
 
     /**
@@ -43,8 +68,8 @@ class User extends Authenticatable
     protected function casts(): array
     {
         return [
-            'email_verified_at' => 'datetime',
-            'password' => 'hashed',
+            "email_verified_at" => "datetime",
+            "password" => "hashed",
         ];
     }
     public function products(){
@@ -52,6 +77,6 @@ class User extends Authenticatable
     }
 
     public static function getProduct(){
-        return Auth::user()->products()->all();
-    } 
+        return Auth::user()->products;
+    }
 }
