# app/backend/routes/api.php
@@ -1,9 +1,11 @@
 <?php
 
-use Illuminate\Http\Request;
 use Illuminate\Support\Facades\Route;
 use App\Http\Controllers\AuthController;
 use App\Http\Controllers\ProductController;
+
+Route::post('/login', [AuthController::class, 'login']);
+Route::post('/register', [AuthController::class, 'register']);
 
 Route::middleware('auth:sanctum', 'json')->group(function () {
     Route::post('/logout', [AuthController::class, 'logout']);
@@ -18,5 +20,9 @@ Route::middleware('auth:sanctum', 'json')->group(function () {
 
 });
 
-Route::post('/login', [AuthController::class, 'login']);
-Route::post('/register', [AuthController::class, 'register']);
+// Route::middleware(['web', 'auth:sanctum'])
+//     ->group(function () {
+//         Route::get('/docs', function () {
+//             return view('l5-swagger.index');
+//         });
+//     });
